<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Camera</string>
    <string name="app_launcher_name">Camera</string>
    <string name="capture_mode">Capture mode</string>
    <string name="maximize_quality">Maximize quality</string>
    <string name="minimize_latency">Minimize latency</string>
    <!-- Errors -->
    <string name="camera_unavailable">Camera unavailable</string>
    <string name="camera_open_error">An error occurred accessing the camera</string>
    <string name="video_creating_error">An error occurred creating the video file</string>
    <string name="video_mode_error">Switching to video mode failed</string>
    <string name="save_error_internal_storage">An error occurred, save folder changed to internal storage</string>
    <string name="camera_switch_error">Switching camera failed</string>
    <string name="click_to_resume_preview">Click on the image to resume preview</string>
    <string name="photo_not_saved">The photo could not be saved</string>
    <string name="setting_resolution_failed">Setting proper resolution failed</string>
    <string name="video_recording_failed">Video recording failed, try using a different resolution</string>
    <string name="camera_in_use_error">Camera is in use by another app, please close the app and try again</string>
    <string name="camera_configure_error">An error occurred while configuring the camera</string>
    <string name="camera_disabled_by_admin_error">Camera is disabled by the admin</string>
    <string name="camera_dnd_error">"Do Not Disturb" mode is enabled. Please disable and try again</string>
    <string name="photo_capture_failed">Photo capture failed</string>
    <string name="video_capture_insufficient_storage_error">Video recording failed due to insufficient storage</string>

    <!-- Camera Screen Icons Content Description -->
    <string name="toggle_photo_video">Toggle photo/video mode</string>
    <string name="change_resolution">Change Resolution</string>
    <string name="view_last_media">View last captured media</string>
    <string name="toggle_camera">Toggle front/back camera</string>
    <string name="toggle_flash">Toggle the flashlight mode</string>
    <string name="toggle_timer">Toggle the timer mode</string>

    <!-- FAQ -->
    <string name="faq_1_title">What photo compression quality should I set?</string>
    <string name="faq_1_text">It depends on your goal. For generic purposes most people advise using 75%-80%, when the image is still really good quality, but the file size is reduced drastically compared to 100%.</string>

    <!-- Settings -->
    <string name="save_photos">Save photos and videos to</string>
    <string name="show_preview">Show a photo preview after capturing</string>
    <string name="shutter_sound">Shutter sound</string>
    <string name="back_camera">Back camera resolutions</string>
    <string name="front_camera">Front camera resolutions</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="focus_before_capture">Focus before capture</string>
    <string name="volume_buttons_as_shutter">Use volume buttons as shutter</string>
    <string name="turn_flash_off_at_startup">Turn flash off at startup</string>
    <string name="flip_front_camera_photos_horizontally">Flip front camera photos horizontally</string>
    <string name="keep_settings_visible">Keep the setting buttons visible</string>
    <string name="always_open_back_camera">Always open the app with the Back camera</string>
    <string name="save_photo_metadata">Save photo exif metadata</string>
    <string name="save_photo_video_location">Save photo and video location</string>
    <string name="photo_compression_quality">Photo compression quality</string>
    <string name="shutter">Shutter</string>
    <string name="error">Error: %s</string>
    <string name="out_of_memory_error">Out of memory error</string>
    <string name="could_not_create_file">Could not create file %s</string>
    <string name="other">Other</string>
    <string name="no_camera_permissions">Camera permission is required</string>
    <string name="no_audio_permissions">Audio permission is required</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="no_app_found">No valid app found</string>
    <string name="open_with">Open with</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="resolution">Resolution</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
    -->
</resources>
